--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,11 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+[isort]
+skip= 
+    venv/
+    migrations
+    tests
+known_first_party=
+    api
+    posts
